# SlayEngine

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  aarch64-linux.toolchain.cmake  compile_flags.txt  x86_64-linux.toolchain.cmake  x86_64-windows.toolchain.cmake
examples/: main.cpp
include/wizard_engine/interfaces/: component.hpp
include/wizard_engine/modules/: math.hpp  timer.hpp
include/wizard_engine/objects/: entity.hpp
include/wizard_engine/utilities/: enumerations.hpp  exception.hpp
src/interfaces/: component.cpp
src/modules/: math.cpp  timer.cpp
src/objects/: entity.cpp
srv/: tcp.rs  udp.rs
tests/modules/: math.cpp  timer.cpp
tests/objects/: entity.cpp
